The version number is hardcoded into sdparm.c (in a C string);
the rpm spec file: sdparm.spec ; the debian/changelog file;
and the configure.ac file (in the AC_INIT item).

ChangeLog for sdparm-1.05 [20100208] [svn: r138]
  - add '--readonly' option especially for '-C start' and
  - '-C stop' on ATA disks.
  - block device characteristics VPD page: decode form factor
  - SAS-2.1 specification split, upper layers placed in SPL
    - add enable_slumber and enable_partial fields to
      Enhanced phy control mode page
  - add AM_MAINTAINER_MODE to configure.ac to lessen build issues

ChangeLog for sdparm-1.04 [20090920] [svn: r129]
  - add SAT ATA Power condition mode page (sat2r06)
  - add SBC Thin provisioning mode page (sbc3r20)
  - add SBC Thin provisioning VPD page (sbc3r20)
  - sync with spc4r21
  - add Power condition, update extended inquiry VPD pages
  - smc3: add Device capabilities + Extended device
    capabilities + Transport geometry parameters mode pages
  - prepare for Thin provisioning VPD and mode pages
  - expand block limits VPD page
  - update Power condition mode page
  - rename SAS-2 phy mode page to Enhanced phy control (SAS)
  - add ADC mode (sub)page place holders
  - print mode page descriptors in full in more contexts
  - add linux bsg support
  - scripts/sas_disk_blink: moved here from sg3_utils package
  - rework the '-w' option (win32) per sg_scan in sg3_utils
  - change SDPARM_* constants to SG_LIB_*
  - remove sdparm.html, refer to its url in sdparm.8
  - sdparm.spec: correction to configure call

ChangeLog for sdparm-1.03 [20080623] [svn: r96]
  - allow more than one DEVICE argument on command line
  - add speed[=val] and profile commands for MMC
  - update Extended Inquiry VPD page to spc4r15
  - 'di' VPD page: decode "NAA Locally assigned"
  - SAS protocol-specific port mpage (subpage=0)
    - add CAWT (sas2r13) and RTOL (sas2r14)
  - change 'long long' to int64_t to stress only require