@@ -2,8 +2,8 @@ bin_PROGRAMS = sdparm
 
 # INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/include/scsi
 
-AM_CFLAGS = -I$(top_srcdir)/include -Wall -W
-# AM_CFLAGS = -I$(top_srcdir)/include -Wall -W -pedantic -std=c99
+AM_CFLAGS = -Wall -W
+# AM_CFLAGS = -Wall -W -pedantic -std=c99
 
 sdparm_SOURCES =	sdparm.c	\
 			sdparm.h	\
@@ -11,8 +11,9 @@ sdparm_SOURCES =	sdparm.c	\
 			sdparm_data_vendor.c	\
 			sdparm_access.c	\
 			sdparm_vpd.c	\
-			sdparm_cmd.c	\
-			../lib/sg_lib.c	\
+			sdparm_cmd.c
+
+sglib_SOURCES =		../lib/sg_lib.c \
 			../include/sg_lib.h	\
 			../lib/sg_lib_data.c	\
 			../include/sg_lib_data.h	\
@@ -23,7 +24,14 @@ sdparm_SOURCES =	sdparm.c	\
 			../include/sg_pt.h	\
 			../lib/sg_pt_common.c
 
-sdparm_LDADD = @os_deps@ @GETOPT_O_FILES@ @os_libs@
+if HAVE_SGUTILS
+INCLUDES = -I/usr/include/scsi
+else
+INCLUDES = -I$(top_srcdir)/include
+sdparm_SOURCES += $(sglib_SOURCES)
+endif
+
+sdparm_LDADD = @os_deps@ @GETOPT_O_FILES@ @os_libs@ @SGUTILS_LIBS@
 sdparm_DEPENDENCIES = @os_deps@ @GETOPT_O_FILES@
 EXTRA_sdparm_SOURCES =	../lib/sg_pt_linux.c	\
 			../include/sg_linux_inc.h	\
